<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Version</string>
    <string name="app_name">Printer</string>
    
    <string name="printer_temp_title">Current Temp: </string>
    <string name="printer_temp">0</string>
    
    <string name="printer_temp_threshold_title">Threshold Temp: </string>
    <string name="printer_temp_threshold">0</string>
    <string name="printer_temp_threshold_def">Def: 50</string>
    
    <string name="bt_set_temp_threshold">Set Threshold</string>
    
    <string name="printer_temp_overheating">Overheating protection</string>
    
    <string name="bt_BACK">Roll Back</string>
    <string name="bt_FORWARD">Forward</string>
    
    <string name="et_printer_def_black">0~4, Def: 2</string>
    <string name="bt_printer_set_black">Set Black</string>
    <string name="bt_printer_set_speed_val">9(0～9)</string>
    <string name="bt_printer_set_speed">Speed</string>
    <string name="bt_barcode_type">Symbology</string>
    <string name="bt_print_hint">Enter the content</string>
    <string name="bt_print_image">Print Image</string>
    <string name="bt_print_barcode">Print barcode</string>
    <string name="bt_print">Print</string>
    <string name="bt_print_no_paper">NO Paper!!</string>
    <string-array name="barcode_type">
        <item>C25INTER</item>
        <item>CODE128</item>
        <item>CODE93</item>
        <item>RSS14</item>
        <item>UPCA</item>
        <item>PDF417</item>
        <item>QRCODE</item>
        <item>DATAMATRIX</item>
        <item>MICROPDF</item>
        <item>AZTEC</item>
    </string-array>
</resources>