<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/et_printer_def_black"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/bt_set_black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_printer_set_black" />
    </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_speed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:hint="@string/bt_printer_set_speed_val" />
            <Button
                android:id="@+id/bt_set_speed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bt_printer_set_speed"/>
        </LinearLayout>
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
 			<TextView
		            android:layout_width="0dp"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:gravity="center"
		            android:text="@string/bt_barcode_type" />
		    <Spinner
	            android:id="@+id/spinner_barcode"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1" />
		</LinearLayout>

    <EditText
        android:id="@+id/printer_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/bt_print_hint"
        android:scrollbarStyle="insideOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bt_BACK" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bt_FORWARD" />
        </LinearLayout>

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_print_image" />

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_print_barcode" />

        <Button
            android:id="@+id/print"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_print" />
    </LinearLayout>

</LinearLayout>